manifests/registry/overlay_limitador/apicurio-envoy-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: apicurio-envoy-config
  labels:
    app: apicurio
data:
  envoy.yaml: >
    static_resources:
      clusters:
      - name: apicurio
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: round_robin
        hosts:
        - socket_address:
            address: 127.0.0.1
            port_value: 8080
      - name: apicurio_ratelimit
        type: STRICT_DNS
        connect_timeout: 1s
        lb_policy: ROUND_ROBIN
        http2_protocol_options: {}
        hosts:
        - socket_address:
            address: limitador
            port_value: 8081
      listeners:
      - name: listener_0
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 38080
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              
              access_log:
                - name: envoy.access_loggers.file
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                    path: "/dev/stdout"
              stat_prefix: http

              route_config:
                name: local_route
                virtual_hosts:
                  - name: apicurio
                    domains: ["*"]
                    routes:
                      - { route: { cluster: apicurio }, match: { prefix: "/" } }
                    rate_limits:
                      - stage: 0
                        actions:
                          - {request_headers: {header_name: "userid", descriptor_key: "user_id"}}
                          - {request_headers: {header_name: ":method", descriptor_key: "req.method"}}
              http_filters:
                - name: envoy.filters.http.ratelimit
                  typed_config:
                    "@type": "type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit"
                    domain: apicurio
                    failure_mode_deny: true
                    timeout: 3s
                    rate_limit_service:
                      transport_api_version: V3
                      grpc_service:
                        { envoy_grpc: { cluster_name: apicurio_ratelimit } }
                - name: envoy.filters.http.router
    admin:
      access_log_path: /dev/stdout
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901
