manifests/registry/overlay_limitador/limitador-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: limitador
  labels:
    app: limitador
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
    - name: grpc
      protocol: TCP
      port: 8081
      targetPort: grpc
  selector:
    app: limitador
